Changes in progress
---------------------------------------------------------------------------------------
- Added submodule of Multisite common functions
- Added message to warn user about quota exceeded in BuddyPress Activity+
- Improved some styles (GCE, buttons, table and image margin with text and code styling) (GitHub #208)
- GCE: Changed default cache duration to 300 seconds (Trello #875)
- Removed link to Social Articles in BuddyPress admin page
- Updated mailer library
- Added some information to replace URL script, for PORTAL
- Fixed catalan spelling in Appearance | Customize | Colors (GitHub #206)
- XTEC Stats: Added first version which includes just a widget to count visits (Trello #821)



Changes 15.06.18
---------------------------------------------------------------------------------------
- Forbidden access to admin-tools and edit-comments for Collaborator user roles (Trello #790)
- Don't allow admins to modify WordPress URL on wp-admin/options-general.php (Trello #797)
- Role names translated in import-users-with-csv (Trello #625)
- Widget Grup-classe: Add navigation buttons to calendar (GitHub #182)
- Widget Grup-classe: Internationalization (GitHub #88)
- Upgraded GCE to version 2.2.5 (Trello #800)
- Added disk quota control (Trello #733)
- Removed plugin Social Articles (Trello #693)
- Improvements in bpdocs styles (Pull request #195)



Changes 15.05.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.0.5
- CSV: Included first version of the import-users-from-csv-with-meta plugin. #95
- If user is not logged in, redirects at login screen on BuddyPress tabs
- Solved categories error on breadcrumbs #2
- Disabled gravatar requests. #122
- PhpInfo for xtecadmins.
- Avoid upload large images (>2MB).
- Hide full size option post insertion (maximum size width 1024)
- Slideshow: Added proportional mode
- Added proxy support